--- a/index.html
+++ b/index.html
@@ -438,7 +438,7 @@
                                         </li>
                                     </ul>
                                     <!-- Copyright notes -->
-                                    <p class="cl9w0 cn1lv caf15">© Jordan Walker. All rights reserved.</p>
+                                    <p class="cl9w0 cn1lv caf15">© Victor Ojong. All rights reserved.</p>
                                 </div>
                             </footer>
         
