--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html lang="en"><head>
         <meta charset="utf-8">
-        <title>DevFolio HTML Demo - Home</title>
+        <title>Victor Ojong--software engineer</title>
         <meta name="viewport" content="width=device-width,initial-scale=1">
         <link href="./style.css" rel="stylesheet">
         <script>
@@ -10,7 +10,7 @@
                 document.querySelector('html').classList.add('dark');
             }
         </script>
-    <script defer="" data-domain="preview.cruip.com,rollup.cruip.com" src="https://plausible.cruip.com/js/script.js"></script><style>
+<style>
     @font-face {
       font-family: 'SegoeUI_online_security'; 
       src: url(chrome-extension://llbcnfanfmjhpedaedhbcnpgeepdnnok/segoe-ui.woff);
@@ -86,17 +86,15 @@
                                         <article class="c752s c1q7e ceoke ciqjs czmrt cqd2s citpx cjmwz">
                                             <div class="cs7fr chiqp">
                                                 <div class="coily cfrxt cw2a0 c9riz c8xr8 c2276 czi0k cw9ok cun1p cmlqw csjzu cf4er chc5d cop7l cebxb">
-                                                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16">
-                                                        <path fill="#9C76EC" d="M7.567 7.6c-1.814-.137-3.56-.885-4.874-2.204A7.662 7.662 0 0 1 .5.5c1.868.136 3.56.884 4.874 2.203A7.662 7.662 0 0 1 7.567 7.6Zm.865 0c1.814-.137 3.56-.885 4.873-2.204C14.62 4.076 15.364 2.322 15.5.5c-1.869.136-3.629.884-4.874 2.203A7.662 7.662 0 0 0 8.432 7.6Zm4.873 3.005c-1.313-1.32-3.06-2.068-4.873-2.204a7.662 7.662 0 0 0 2.193 4.896c1.313 1.32 3.06 2.067 4.874 2.204-.136-1.877-.88-3.645-2.194-4.896ZM7.636 8.4c-1.882.136-3.629.884-4.942 2.204C1.38 11.854.622 13.623.5 15.5c1.868-.123 3.56-.884 4.942-2.204a7.662 7.662 0 0 0 2.193-4.896Z"></path>
-                                                    </svg>
+                                                  <img style="clip-path: circle();" src="./assets/mentorshub-logo.png" alt="">
                                                 </div>
                                                 <div>
                                                     <div class="cxozv cxrkr">
                                                         <div class="cp78t c5qvh cplrd">2021 - Today</div>
                                                         <h3 class="c045m ca1ms c7v7z">
-                                                            <a class="c0t07 ciyg5 c9n2z csdx0 cg1zu" href="#0">Senior Developer and VP of Product at Qonto</a>
+                                                            <a class="c0t07 ciyg5 c9n2z csdx0 cg1zu" href="https://mentorshub.io/">Backend Engineer at MentorsHub</a>
                                                         </h3>
-                                                        <div class="text-gray-600dark:text-gray-400 cp78t ckgk8">London, UK</div>
+                                                        <div class="text-gray-600dark:text-gray-400 cp78t ckgk8">Estonia, Europe</div>
                                                     </div>
                                                     <p class="cl9w0 cjnk1 cu98r">Setting vision, leadership, processes while directly participating in communications with clients such as eBay, Amazon, X, Twitch, Instagram, and many others.</p>
                                                 </div>
@@ -106,17 +104,15 @@
                                         <article class="c752s c1q7e ceoke ciqjs czmrt cqd2s citpx cjmwz">
                                             <div class="cs7fr chiqp">
                                                 <div class="coily cfrxt cw2a0 c9riz c8xr8 c2276 czi0k cw9ok cun1p cmlqw csjzu cf4er chc5d cop7l cebxb">
-                                                    <svg class="c42yo cfs63" xmlns="http://www.w3.org/2000/svg" width="18" height="11">
-                                                        <path d="M5.077 0c2.803 0 5.076 2.418 5.076 5.4s-2.273 5.4-5.076 5.4C2.273 10.8 0 8.382 0 5.4S2.273 0 5.077 0Zm8.106.316c1.402 0 2.538 2.276 2.538 5.084 0 2.807-1.136 5.084-2.538 5.084S10.645 8.207 10.645 5.4c0-2.807 1.136-5.084 2.538-5.084ZM18 5.4c0-2.515-.4-4.554-.893-4.554-.492 0-.892 2.04-.892 4.554 0 2.515.4 4.555.892 4.555.494 0 .893-2.04.893-4.555Z"></path>
-                                                    </svg>
+                                                    <img style="clip-path: circle();" src="./assets/refresh.png" alt="">
                                                 </div>
                                                 <div>
                                                     <div class="cxozv cxrkr">
                                                         <div class="cp78t c5qvh cplrd">2019 - 2021</div>
                                                         <h3 class="c045m ca1ms c7v7z">
-                                                            <a class="c0t07 ciyg5 c9n2z csdx0 cg1zu" href="#0">Fullstack Developer at Medium Inc.</a>
+                                                            <a class="c0t07 ciyg5 c9n2z csdx0 cg1zu" href="#0">Fullstack Developer at Switchtech Inc.</a>
                                                         </h3>
-                                                        <div class="text-gray-600dark:text-gray-400 cp78t ckgk8">New York, NYC</div>
+                                                        <div class="text-gray-600dark:text-gray-400 cp78t ckgk8">Lagos, Nigeria</div>
                                                     </div>
                                                     <p class="cl9w0 cjnk1 cu98r">Setting vision, leadership, processes while directly participating in communications with clients such as eBay, Amazon, X, Twitch, Instagram, and many others.</p>
                                                 </div>
@@ -126,17 +122,15 @@
                                         <article class="c752s c1q7e ceoke ciqjs czmrt cqd2s citpx cjmwz">
                                             <div class="cs7fr chiqp">
                                                 <div class="coily cfrxt cw2a0 c9riz c8xr8 c2276 czi0k cw9ok cun1p cmlqw csjzu cf4er chc5d cop7l cebxb">
-                                                    <svg xmlns="http://www.w3.org/2000/svg" width="18" height="16">
-                                                        <path fill="#00ADEF" d="M17.995 3.602c-.075 1.725-1.274 4.124-3.674 7.198-2.474 3.15-4.499 4.799-6.223 4.799-1.05 0-1.95-.975-2.7-2.924-.45-1.8-.974-3.524-1.424-5.324-.525-1.95-1.125-2.924-1.725-2.924-.15 0-.6.3-1.424.825L0 4.202c.9-.75 1.8-1.575 2.624-2.325 1.2-1.05 2.1-1.574 2.7-1.65 1.424-.15 2.249.826 2.549 2.85.375 2.175.6 3.6.75 4.124.375 1.8.825 2.774 1.35 2.774.374 0 .974-.6 1.724-1.8.75-1.199 1.125-2.099 1.2-2.698.075-1.05-.3-1.575-1.2-1.575-.45 0-.9.075-1.35.3.9-2.924 2.55-4.274 5.099-4.199 1.8.075 2.624 1.275 2.55 3.599Z"></path>
-                                                    </svg>
+                                                   <img src="./assets/cropped-TUBOR-LOGO-2.png" alt="">
                                                 </div>
                                                 <div>
                                                     <div class="cxozv cxrkr">
                                                         <div class="cp78t c5qvh cplrd">2017 - 2019</div>
                                                         <h3 class="c045m ca1ms c7v7z">
-                                                            <a class="c0t07 ciyg5 c9n2z csdx0 cg1zu" href="#0">System Engineer and Web Developer at Vimeo</a>
+                                                            <a class="c0t07 ciyg5 c9n2z csdx0 cg1zu" href="https://turboenergy.com/">Backend Engineer at Turbo Energy </a>
                                                         </h3>
-                                                        <div class="text-gray-600dark:text-gray-400 cp78t ckgk8">London, UK</div>
+                                                        <div class="text-gray-600dark:text-gray-400 cp78t ckgk8">Abuja, Nigeria</div>
                                                     </div>
                                                     <p class="cl9w0 cjnk1 cu98r">Setting vision, leadership, processes while directly participating in communications with clients such as eBay, Amazon, X, Twitch, Instagram, and many others.</p>
                                                 </div>
