--- a/index.html
+++ b/index.html
@@ -66,12 +66,12 @@
                                         <h1 class="cxqn4 ckx3g cx37a c4o0c ca1ms c7v7z">Victor Ojong</h1>
                                         <p class="cl9w0 cjnk1 cu98r">Fullstack developer and Tech community builder.</p>
                                     </div>
-                                    <a class="c8j31 cu81w cqzhu c8uww ctphr c1m9b cdvd9 c5v5y c57ju ca0vo cz4g8 ceq97 c3ew3 cb1r6 cel1w cyamd cjf4f cvr54 cha6o cht5m c6x6e c7vou" href="#0">Let's Build Together</a>
+                                    <a class="c8j31 cu81w cqzhu c8uww ctphr c1m9b cdvd9 c5v5y c57ju ca0vo cz4g8 ceq97 c3ew3 cb1r6 cel1w cyamd cjf4f cvr54 cha6o cht5m c6x6e c7vou" href="#0">Making the world a better place</a>
                                 </div>
                                 <div class="coily c2276 c37m1 cdgze">
-                                    <img class="c752s cev7p c88aw cs4tg ccy0p cna1y cfbgi c65hu" src="./images/header-image-01.jpg" width="245" height="160" alt="Header 01">
-                                    <img class="c752s cev7p c88aw cs4tg ccy0p cna1y cfbgi c65hu" src="./images/header-image-02.jpg" width="245" height="160" alt="Header 02">
-                                    <img class="c752s cev7p c88aw cs4tg ccy0p cna1y cfbgi c65hu" src="./images/header-image-03.jpg" width="245" height="160" alt="Header 03">
+                                    <img class="c752s cev7p c88aw cs4tg ccy0p cna1y cfbgi c65hu" src="./assets/port42.png" width="245"  alt="Header 01">
+                                    <img class="c752s cev7p c88aw cs4tg ccy0p cna1y cfbgi c65hu" src="./assets/port55.png" width="245" alt="Header 02">
+                                    <img class="c752s cev7p c88aw cs4tg ccy0p cna1y cfbgi c65hu" src="./assets/port12.png" width="245"  alt="Header 03">
                                 </div>
                             </header>
         
@@ -222,7 +222,7 @@
         
                                 <!-- Side Hustles -->
                                 <section>
-                                    <h2 class="cragt ckx3g cuykd c045m ca1ms c7v7z">Side Hustles</h2>
+                                    <h2 class="cragt ckx3g cuykd c045m ca1ms c7v7z">API Services</h2>
                                     <div class="c1hft c37m1 cbi4k">
                                         <!-- Post #1 -->
                                         <article class="cu81w c752s c1q7e ceoke ciqjs czmrt cdgze cqd2s citpx cjmwz">
