--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                                         <h1 class="cxqn4 ckx3g cx37a c4o0c ca1ms c7v7z">Victor Ojong</h1>
                                         <p class="cl9w0 cjnk1 cu98r">Fullstack developer</p>
                                     </div>
-                                    <a class="c8j31 cu81w cqzhu c8uww ctphr c1m9b cdvd9 c5v5y c57ju ca0vo cz4g8 ceq97 c3ew3 cb1r6 cel1w cyamd cjf4f cvr54 cha6o cht5m c6x6e c7vou" href="#0">Making the world a better place</a>
+                                    <a class="c8j31 cu81w cqzhu c8uww ctphr c1m9b cdvd9 c5v5y c57ju ca0vo cz4g8 ceq97 c3ew3 cb1r6 cel1w cyamd cjf4f cvr54 cha6o cht5m c6x6e c7vou" href="#0">Making Our World a Better Place</a>
                                 </div>
                                 <div class="coily c2276 c37m1 cdgze">
                                     <img class="c752s cev7p c88aw cs4tg ccy0p cna1y cfbgi c65hu" src="./assets/port42.png" width="245"  alt="Header 01">
@@ -140,7 +140,7 @@
                                         <!-- Video #1 -->
                                         <article class="cu81w czjac cb1d7 c752s cev7p c88aw cs4tg ccy0p c65hu cd4zm cjsrp">
                                             <figure class="ciobu ckza3 c5v5y c57ju co05v c2mzw c3fki cps9j">
-                                                <img class="ciq3g c3v30 cclia" src="./assets/online banner.png" width="600" height="338" alt="Tutorial 01">
+                                                <img class="ciq3g c3v30 cclia" src="./assets/online.png" width="600" height="338" alt="Tutorial 01">
                                             </figure>
                                             
                                         </article>
