update: api docs session

--- a/index.html
+++ b/index.html
@@ -224,9 +224,9 @@
                                             </div>
                                             <div class="ce075">
                                                 <h3 class="c045m ca1ms c7v7z">
-                                                    <a class="c5v5y c57ju" href="#0">Tail Library</a>
+                                                    <a class="c5v5y c57ju" href="#0">Demo Credit App</a>
                                                 </h3>
-                                                <p class="cl9w0 cjnk1 cu98r">An easy-to-use components library based on Tailwind CSS.</p>
+                                                <p class="cl9w0 cjnk1 cu98r">Demo Credit is a mobile lending app that requires wallet functionality. This is needed as borrowers need a wallet to receive the loans they have been granted and also send the money for repayments.</p>
                                             </div>
                                         </article>
                                         <!-- Post #2 -->
@@ -244,9 +244,12 @@
                                             </div>
                                             <div class="ce075">
                                                 <h3 class="c045m ca1ms c7v7z">
-                                                    <a class="c5v5y c57ju" href="#0">KumoNext</a>
+                                                    <a class="c5v5y c57ju" href="#0">Forex Trading App</a>
                                                 </h3>
-                                                <p class="cl9w0 cjnk1 cu98r">A free frontend framework based on Tailwind CSS and Next.js.</p>
+                                                <p class="cl9w0 cjnk1 cu98r">Forex trading app is an API service that allows clients make foriegn exchange such as buying and selling curencies. Wallet transactions like credit and debit into thier local bank acount. Users have can see their transaction history. 
+                                                  
+                                                </p>
+                                                
                                             </div>
                                         </article>
                                     </div>
