--- a/index.html
+++ b/index.html
@@ -113,10 +113,10 @@
       <img class="d-block w-100" src="./assets/port12.png" alt="First slide">
     </div>
     <div class="carousel-item">
-      <img class="d-block w-100" src="./assets/port55.png" alt="Second slide">
+      <img class="d-block w-100" src="./assets/port42.png" alt="Second slide">
     </div>
      <div class="carousel-item">
-      <img class="d-block w-100" src="./assets/port22.png" alt="Third slide">
+      <img class="d-block w-100" src="./assets/logistics4me.png" alt="Third slide">
     </div>
   </div>
    
