--- a/index.html
+++ b/index.html
@@ -154,7 +154,8 @@
                                                         </h3>
                                                         <div class="text-gray-600dark:text-gray-400 cp78t ckgk8">Estonia, Europe</div>
                                                     </div>
-                                                    <p class="cl9w0 cjnk1 cu98r">Setting vision, leadership, processes while directly participating in communications with clients such as eBay, Amazon, X, Twitch, Instagram, and many others.</p>
+                                                    <p class="cl9w0 cjnk1 cu98r">I played a pivotal role in developing the MentorsHub API services and modules utilizing NestJS and TypeScript. By integrating event schedulers and background jobs, we orchestrated dynamic notifications and mission-critical functionalities. This initiative led to a remarkable increase in user engagement on the application, exceeding 60%.
+</p>
                                                 </div>
                                             </div>
                                         </article>
@@ -172,7 +173,7 @@
                                                         </h3>
                                                         <div class="text-gray-600dark:text-gray-400 cp78t ckgk8">Lagos, Nigeria</div>
                                                     </div>
-                                                    <p class="cl9w0 cjnk1 cu98r">Setting vision, leadership, processes while directly participating in communications with clients such as eBay, Amazon, X, Twitch, Instagram, and many others.</p>
+                                                    <p class="cl9w0 cjnk1 cu98r">As a team leader, I spearheaded the development of large-scale products, focusing on server-side applications and API development. Leveraging collaboration tools such as Slack and GitHub, I facilitated seamless communication and efficient bug fixing, along with rigorous code reviews. This approach resulted in optimized API solutions and a substantial improvement in software quality. We achieved a remarkable reduction in both time and space complexity, exceeding 45%.</p>
                                                 </div>
                                             </div>
                                         </article>
@@ -190,7 +191,8 @@
                                                         </h3>
                                                         <div class="text-gray-600dark:text-gray-400 cp78t ckgk8">Abuja, Nigeria</div>
                                                     </div>
-                                                    <p class="cl9w0 cjnk1 cu98r">Setting vision, leadership, processes while directly participating in communications with clients such as eBay, Amazon, X, Twitch, Instagram, and many others.</p>
+                                                    <p class="cl9w0 cjnk1 cu98r"> Orchestrated and enhanced our service network delivery by implementing continuous monitoring of our internal cloud-based services. This proactive approach ensured our servers remained in optimal health, significantly reducing downtime. As a result, we witnessed a remarkable 67% improvement in customer experience on the Pay4Power application.
+.</p>
                                                 </div>
                                             </div>
                                         </article>
@@ -204,7 +206,7 @@
                                         <!-- Video #1 -->
                                         <article class="cu81w czjac cb1d7 c752s cev7p c88aw cs4tg ccy0p c65hu cd4zm cjsrp">
                                             <figure class="ciobu ckza3 c5v5y c57ju co05v c2mzw c3fki cps9j">
-                                                <img class="ciq3g c3v30 cclia" src="./assets/online.png" width="600" height="338" alt="Tutorial 01">
+                                                <img class="ciq3g c3v30 cclia" src="./assets/online banner.png" width="600" height="338" alt="Tutorial 01">
                                             </figure>
                                             
                                         </article>
