--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
                                                 </div>
                                                 <div>
                                                     <div class="cxozv cxrkr">
-                                                        <div class="cp78t c5qvh cplrd">2021 - Today</div>
+                                                        <div class="cp78t c5qvh cplrd">2023 - Today</div>
                                                         <h3 class="c045m ca1ms c7v7z">
                                                             <a class="c0t07 ciyg5 c9n2z csdx0 cg1zu" href="https://mentorshub.io/">Backend Engineer at MentorsHub</a>
                                                         </h3>
@@ -167,7 +167,7 @@
                                                 </div>
                                                 <div>
                                                     <div class="cxozv cxrkr">
-                                                        <div class="cp78t c5qvh cplrd">2019 - 2021</div>
+                                                        <div class="cp78t c5qvh cplrd">2022 - 2024</div>
                                                         <h3 class="c045m ca1ms c7v7z">
                                                             <a class="c0t07 ciyg5 c9n2z csdx0 cg1zu" href="#0">Fullstack Developer at Switchtech Inc.</a>
                                                         </h3>
@@ -185,7 +185,7 @@
                                                 </div>
                                                 <div>
                                                     <div class="cxozv cxrkr">
-                                                        <div class="cp78t c5qvh cplrd">2017 - 2019</div>
+                                                        <div class="cp78t c5qvh cplrd">2021 - 2022</div>
                                                         <h3 class="c045m ca1ms c7v7z">
                                                             <a class="c0t07 ciyg5 c9n2z csdx0 cg1zu" href="https://turboenergy.com/">Backend Engineer at Turbo Energy </a>
                                                         </h3>
@@ -234,7 +234,7 @@
                                             <div class="czq8f cxrkr">
                                                 <div class="cp78t ckgk8 cjnk1 cu98r">mentorshub.io</div>
                                                 <h3 class="c045m ca1ms c7v7z">
-                                                    <a class="c5v5y c57ju" href="#0">KumoX Images Now available On Docker Hub</a>
+                                                    <a class="c5v5y c57ju" href="#0">AI secret exposed</a>
                                                 </h3>
                                             </div>
                                             <p class="cl9w0 cjnk1 cu98r">Today, KumoX announced that it has become a DVP, marking a significant milestone for our shared mission to enhance the security.</p>
@@ -247,9 +247,9 @@
                                                 </svg>
                                             </div>
                                             <div class="czq8f cxrkr">
-                                                <div class="cp78t ckgk8 cjnk1 cu98r">medium.com</div>
+                                                <div class="cp78t ckgk8 cjnk1 cu98r">LinkedIn.com</div>
                                                 <h3 class="c045m ca1ms c7v7z">
-                                                    <a class="c5v5y c57ju" href="#0">Nobody Wants To Work with Josh</a>
+                                                    <a class="c5v5y c57ju" href="#0">Transition from Junior to senior Developer</a>
                                                 </h3>
                                             </div>
                                             <p class="cl9w0 cjnk1 cu98r">There was a wizard engineer (we'll call him “Josh”) who worked for me a few years ago. His code was good. His PRs were quick.</p>
@@ -262,9 +262,9 @@
                                                 </svg>
                                             </div>
                                             <div class="czq8f cxrkr">
-                                                <div class="cp78t ckgk8 cjnk1 cu98r">indiehackers.com</div>
+                                                <div class="cp78t ckgk8 cjnk1 cu98r">switchtech.com</div>
                                                 <h3 class="c045m ca1ms c7v7z">
-                                                    <a class="c5v5y c57ju" href="#0">A Sharp And Solid Outline Of 3D Grid Magic</a>
+                                                    <a class="c5v5y c57ju" href="#0">Is Tech for me? </a>
                                                 </h3>
                                             </div>
                                             <p class="cl9w0 cjnk1 cu98r">Since the world is 3D, it's no surprise that video games, mobile robotics challenges, and architectural design tools often require 3D variants.</p>
