add: session image

--- a/index.html
+++ b/index.html
@@ -388,7 +388,9 @@
         
                                 <!-- Newsletter -->
                                 <section>
+                                    
                                     <h2 class="cragt ckx3g cuykd c045m ca1ms c7v7z">Book live session</h2>
+                                    <img src="./assets/mentoring.jpg" alt="">
                                     <div class="c752s cgvqk ci9im c69po c1q7e cvx4u czakf cwq9q">
                                         <form>
                                             <div class="coily cwap5 cmlqw c090i c6x7o c1djd c2yrc criup">
