--- a/index.html
+++ b/index.html
@@ -472,6 +472,8 @@ function changeLigth(){
    document.querySelector('html').classList.toggle('dark');
 }                                
 </script>
+ <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js" defer></script>
+
 <script src="./js/scripts.js"> </script>
 <script src="./js/script.js"> </script>
 
